--- a/src/components/faculty-bio-info-card/_faculty-bio-info-card.scss
+++ b/src/components/faculty-bio-info-card/_faculty-bio-info-card.scss
@@ -36,7 +36,7 @@
 }
 
 .faculty-bio-info-card__content {
-  padding: rem(38);
+  padding: rem(38) 0;
   @include media-breakpoint-up(md) {
     flex: 1 1 0;
     padding-top: 0;
@@ -59,7 +59,7 @@
 
 .faculty-bio-info-card__contact-box {
   background-color: $off-white;
-  margin: rem(20) rem(38) 0;
+  margin: rem(20) 0 0;
   padding: rem(38);
   position: relative;
   @include media-breakpoint-up(md) {
@@ -71,13 +71,6 @@
     padding: rem(50) rem(60);
     flex: 0 0 auto;
     width: rem(412);
-  }
-
-  .faculty-bio-info-card--no-image & {
-    @include media-breakpoint-up(md) {
-      flex: 0 0 auto;
-      width: rem(412);
-    }
   }
 
   &:before {
@@ -114,11 +107,6 @@
   @include media-breakpoint-up(xl) {
     display: block;
     max-width: none;
-  }
-  .faculty-bio-info-card--no-image & {
-    @include media-breakpoint-up(md) {
-      display: block;
-    }
   }
 }
 
