update to: https://bugify.idfive.com/issues/27697, fixing console issue in site-header when no search is present

--- a/src/components/faculty-bio-info-card/_faculty-bio-info-card.scss
+++ b/src/components/faculty-bio-info-card/_faculty-bio-info-card.scss
@@ -39,7 +39,7 @@
   padding: rem(38) 0;
   @include media-breakpoint-up(md) {
     flex: 1 1 0;
-    padding-top: 0;
+    padding: 0 rem(38) rem(38) rem(38);
   }
   .faculty-bio-info-card--no-image & {
     padding-left: 0;
